--- a/b11-assignment-1/index.html
+++ b/b11-assignment-1/index.html
@@ -32,6 +32,33 @@
                 <img src="/B11A1--assignment-1/assets/hero.png" alt="">
             </section>
         </div>
+        <section class="pillars">
+            <h1>Pillars of Bangladesh 2.0"</h1>
+            <div class="boxs">
+            <!--.skill*4>img+h4.skill-title+p.skill-description-->
+            <div class="pillar-of-bd">
+                <img src="/B11A1--assignment-1/assets/card-icon.png" alt="">
+                <h4 class="pillar-title">Innovation</h4>
+                <p class="pillar-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+            </div>
+            <div class="pillar-of-bd">
+                <img src="/B11A1--assignment-1/assets/card-icon.png" alt="">
+                <h4 class="pillar-title">Sustainability</h4>
+                <p class="pillar-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+            </div>
+            <div class="pillar-of-bd">
+                <img src="/B11A1--assignment-1/assets/card-icon.png" alt="">
+                <h4 class="pillar-title">Infrastructure</h4>
+                <p class="pillar-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+            </div>
+            <div class="pillar-of-bd">
+                <img src="/B11A1--assignment-1/assets/card-icon.png" alt="">
+                <h4 class="pillar-title">Empowerment</h4>
+                <p class="pillar-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+            </div>
+            </div>
+           
+        </section>
         <section class="vision">
             <h3 class="future">The Vision of Future</h3>
             <p class="para">Bangladesh 2.0 aims to redefine the nation's trajectory by embracing cutting-edge
@@ -154,9 +181,25 @@
                 <button class="done btn">Done Now</button>
             </div>
         </section>
+        <section class="subscriber">
+            <h1>Subscribe Newsletter</h1>
+            <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth.</p>
+            <form action="">
+                <input class="input" type="email" placeholder="Enter your email here" >
+                <button class="btn">Subscribe</button>
+            </form>
+        </section>
     </main>
     <footer>
-
+        <div class="footer">
+            <h2>Bangladesh 2.0</h2>
+            <hr>
+            <div class="image">
+            <img src="/B11A1--assignment-1/assets/facebook.png" alt="">
+            <img src="/B11A1--assignment-1/assets/instagram.png" alt="">
+            <img src="/B11A1--assignment-1/assets/x.png" alt="">
+        </div>
+    </div>
     </footer>
 </body>
 
